2004-09-10  Jakub Jelinek  <jakub@redhat.com>

	* view.c (get_byte): Fix avoid dying if file is too large 
	to fit into memory.
	(load_view_file): Fix avoid mmaping just part of a >=4GB file 
	on 32-bit arches.

2004-09-04  Jakub Jelinek  <jakub@redhat.com>

	* info.c (info_show_info): don't truncate block counts to 32 bits
	on 64-bit platforms

2004-09-04  Pavel S. Shirshov <pavelsh@mail.ru>

	* subshell.c (exit_subshell): Prevent unwanted reuse of freed 
	pty_buffer.
	* complete.c (variable_completion_function): strncpy()->memcpy()
	changes are because we know there is no '\0' among the first 
	length bytes.
	(insert_text): Likewise.
	(command_completion_function): Avoid memory leaks.
	(filename_completion_function): g_free handles NULL argument too,
	no need for the comparison.
	(try_complete): Likewise.
	(command_completion_function): Likewise.
	(free_completions): Likewise.
	* widget.c (gauge_callback): Fix for 64-bit arches (%*s len must
	be int, %3d takes int.
	(copy_region): g_free handles NULL argument too, no need for 
	the comparison.
	(kill_line): Likewise.
	* find.c (do_search): Likewise.
	(init_find_vars): Likewise.
	(do_find): Likewise.
	* util.c (get_current_wd): We know there is just one '\0' byte 
	in p, at p[len - 1].

        Based on patch from Jakub Jelinek  <jakub@redhat.com>

2004-09-03  Pavel S. Shirshov <pavelsh@mail.ru>

	* menu.c (destroy_menu): Fix warnings.
	* view.c (view_adjust_size): Likewise.
	* widget.c (find_buttonbar): Likewise.

        Based on patch from Jakub Jelinek  <jakub@redhat.com>

2004-09-02  Roland Illig  <roland.illig@gmx.de>

	* color.c (try_alloc_color_pair (ncurses)): Added const qualifier
	to the arguments.

2004-09-02  Roland Illig  <roland.illig@gmx.de>

	* man2hlp.c (handle_link): Added header "glibcompat.h" because
	glib-1.2 does not know g_strlcpy.
	* Makefile.am (man2hlp): Added source file glibcompat.c for
	glib-1.2 compatibility.

2004-09-02  Pavel S. Shirshov <pavelsh@mail.ru>
